# Genesis

./: CMakeLists.txt  Fullerene-C20.json  README.md  imgui.ini
include/: CMakeLists.txt
include/glad/: glad.c  glad.h
include/glm/detail/: type_vec3.hpp
resource/: CHO_combustion.ff
resource/localizations/: enus.json  ptbr.json
resource/molecules/: alphahelix.xyz  dna.xyz  dnaplus.xyz  dopaminereceptor.xyz  hammerheadribocyte.xyz  ice.xyz  nanoparticle.xyz  satelitemosaicvirus.xyz  yes.xyz
resource/molecules/compounds/: 4-hydroxycubane-1-carboxamide.json  AceticAcid.json  AceticAcid.xyz  Acetone.json  Acetone.xyz  Acetylene.json  Acetylene.xyz  Adenine.json  Adenine.xyz  Alanine.json  Alanine.xyz  Ammonia.json  Ammonia.xyz  Ammonium.json  Ammonium.xyz  Aspirin.json  Aspirin.xyz  Benzene.json  Benzene.xyz  Beta-D-Glucose.json  Beta-D-Glucose.xyz  Beta-D-Ribose.json  Beta-D-Ribose.xyz  ButanoicAcid.json  ButanoicAcid.xyz  C20.json  C20.xyz  Caffeine.json  Caffeine.xyz  CalciumHydroxide.json  CalciumHydroxide.xyz  CapricAcid.json  CapricAcid.xyz  CarbonDioxide.json  CarbonDioxide.xyz  CarbonMonoxide.json  CarbonMonoxide.xyz  Carborane.json  Carborane.xyz  Cholesterol.xyz  (+96 more)
resource/parameters/: UniversalLJ.csv  UniversalMorse.csv
resource/shaders/: angle.comp  arrow.frag  arrow.vert  bond.frag  bond.vert  bonded.comp  box.vert  color.frag  color.vert  hyper_balls.frag  hyper_balls.vert  select.frag  select.vert  simulation.comp  unbonded.comp
scenes/menu display/: fullerene.json
scenes/saved/: Ethanol.json  Hydroxide.json  NaCl.json  Nitrogen.json  WLipids.json  Water.json  e.json  l.json  t.json  video_l.json  w.json
scenes/scenarios/: SCENARIO_DYNAMICS_AtmosphereLayers.json  SCENARIO_DYNAMICS_CrystalNucleation.json  SCENARIO_DYNAMICS_DropletFormation.json  SCENARIO_DYNAMICS_browinian_motion.json  TUTORIAL_CLASSICAL_COULOMB.json  TUTORIAL_CLASSICAL_PHASES.json  TUTORIAL_CLASSICAL_VDW.json
src/: common.hpp  main.cpp
src/core/: ScenarioHander.cpp  ScenarioHandler.hpp  UIHandler.cpp  UIHandler.hpp  application.cpp  application.hpp  buffer.hpp  camera.hpp  image_utils.cpp  image_utils.hpp  menu.cpp  menu.hpp  shader.cpp  shader.hpp  spatialgrid.hpp  verletlist.cpp  verletlist.hpp  window.cpp  window.hpp
src/core/audio/: audio.cpp  audio.hpp
src/core/graphics/: camera.hpp  framebufferUtils.cpp  framebufferUtils.hpp  shader.hpp  window.cpp  window.hpp
src/core/ui/: ScenarioHander.cpp  ScenarioHandler.hpp  UICompoundBrowser.cpp  UICompoundBrowser.hpp  UIEditor.cpp  UIEditor.hpp  UIHandler.cpp  UIHandler.hpp  UIHierarchy.cpp  UIHierarchy.hpp  UIPacker.cpp  UIPacker.hpp  UIParameters.cpp  UIParameters.hpp  UISimulation.cpp  UISimulation.hpp  UIStats.cpp  UIStats.hpp  UIVideoControls.cpp  UIVideoControls.hpp
src/core/utils/: buffer.hpp  raycast.hpp  spatialgrid.hpp  verletlist.cpp  verletlist.hpp
src/resource/: nanopartifcle.xyz  protein.xyz  trp_cage.xyz
src/resource/localizations/: enus.json  ptbr.json
src/resource/molecules/: car.xyz  dna.xyz  gears.xyz  trp_cage.xyz
src/scenes/: 2025_12_1219_46.json
src/scenes/menu display/: BilayerLipids.json  DNA.json  fullerenes.json  video_fullerenes.json
src/scenes/saved/: 2025_12_2003_34.json  Brownian_Motion.json  Brownian_Motion_transition.json  Cubane.json  Lipids 2.json  Lipids.json  Lipids2.json  Methane.json  NaCl.json  Natural Gas.json  Phospholipids.json  Stuff 2.json  Stuff 23.json  Stuff.json  Tests.json  e.json  full.json  rr.json  video_Brownian_Motion.json  video_Brownian_Motion_transition.json  video_Stuff 2.json  video_Stuff 23.json  video_Stuff.json  video_e.json  video_r.json  video_rr.json
src/scenes/videos/: 2025_12_1219_48.json  2025_12_1220_17.json  2025_12_1222_18.json  2025_12_1222_19.json
src/shaders/: bond.frag  bond.vert  box.frag  color.frag  color.vert  hyper_balls.frag
src/simulation/: constants.hpp  dynamics.cpp  dynamics.hpp  format_loader.cpp  format_loader.hpp  fundamental_structures.cpp  fundamental_structures.hpp  pdb_loader.cpp  pdb_loader.hpp  quantum_engine.cpp  quantum_engine.hpp  reaction_engine.cpp  reaction_engine.hpp  reaxx.cpp  reaxx.hpp  rendering_engine.cpp  rendering_engine.hpp  simulation_analyzer.hpp  simulation_inspector.cpp  simulation_inspector.hpp  simulation_packer.cpp  simulation_packer.hpp  smiles_parser.cpp  smiles_parser.hpp  universe.cpp  universe.hpp
src/simulation/chemistry/: reaction_engine.hpp
src/simulation/core/: atom_storage.cpp  atom_storage.hpp  rendering_engine.cpp  rendering_engine.hpp  simulation.hpp  simulation_inspector.cpp  simulation_inspector.hpp  simulation_packer.cpp  universe.cpp  (+2 more)
(+40 files in other folders)
